[package]
name = "novaquestao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
promptly = "0.3.1"
colored = "2.1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"  # Optimize for size.a
strip = true  # Automatically strip symbols from the binary.
